main.css
body * {
  box-sizing: border-box;
}

/*Minimized header styles*/
header {
  background: #443266;
  color: #fff;
  height: 13vh;
  padding: 20px 10px;
}

h1 {
  width: 40%;
  float: left;
  vertical-align: middle;
  font-weight: lighter;
  line-height: 1.8;
}

form {
  width: 60%;
  float: left;

}

select[name="specialty"] {
  width: 70%;
}

select[name="gender"] {
  width: 28%;
}

h1, h2, h3, h4 {
  margin: 0;
  font-weight: lighter;
}

h4 {
  display: none;
  font-weight: lighter;
}

form div {
  margin: 5px auto;
}

.search input {
  width: 80%;
  border: 1px solid #aaa;
  border-radius: 3px;
  height: 25px;
  padding-left: 5px;
}

.search button {
  width: 18%;
  height: 25px;
  background: #C3C3E5;
  border: 1px solid #aaa;
  border-radius: 3px;
}

button:focus {
  outline: 0;
}

.about-section {
  display: none;
}

/*Full screen header styles*/
#results, #map {
  display: none;
}

.full-screen {
  /*height: 100vh;*/
  height: auto;
  text-align: center;
  padding: 0;
}

.full-screen h1 {
  width: 100%;
  float: none;
}

.full-screen h4 {
  display: block;
  margin: 20px auto;
}

.full-screen form {
  width: 100%;
  float: none;
}

.full-screen form div {
  margin: 20px auto;
  width: 50%;
}

.full-screen .hero-section {
  /*placeholder for hero-image*/
  background: #000;
  width: 100%;
  height: 50vh;
  padding-top: 100px;
  padding-left: 10px;
  padding-right: 10px;
}

.full-screen .about-section {
  display: block;
  padding: 40px 10px;
}

.about-section {
  height: 50vh;
}

.about-section>div {
  padding: 50px 0;
}

.about-panel {
  width: 33%;
  display: inline-block;
}

.about-panel i {
  font-size: 4em;
  /*vertical-align: bottom;*/
}

.about-description p {
  max-width: 80%;
  margin: 16px auto;
  font-weight: lighter;
}

#map {
  height: 87vh;
  width: 70%;
  float: left;
}

#results {
  height: 87vh;
  width: 30%;
  padding-top: 10px;
  padding-bottom: 10px;
  background: #C3C3E5;
  float: left;
  overflow-y: scroll;
}

#results h3 {
  text-align: center;
  font-weight: normal;
}

#results .error {
  color: #f00;
  font-weight: bold;
  margin: 20px auto;
}

#map .error {
  text-align: center;
  font-weight: bold;
  color: #f00;
  margin: 20px auto;
}

.doc-card {
  width: 90%;
  margin: 10px auto;
  background: #fff;
  border: 1px solid #000;
  padding: 5px;
  border-radius: 3px;
}

.doc-card img {
  float: left;
  margin-right: 10px;
}

.expanded-description {
  padding-top: 5px;
  padding-bottom: 5px;
  clear: both;
  display: none;
}

.expanded-description p {
  margin: 0;
  text-align: justify;
}

.expand {
  cursor: pointer;
  clear: both;
  margin: 0;
  text-align: center;
  font-size: 1.5em;
}

@media only screen and (max-width: 800px) {
  .full-screen form div {
    margin: 20px auto;
    width: 80%;
  }

  .about-panel {
    width: 30%;
    display: inline-block;
  }
}

@media only screen and (max-width: 500px) {
  .full-screen form div {
    margin: 20px auto;
    width: 100%;
  }

  .full-screen form {
    font-size: 1em;
  }

  .search input, .search button, .filters select {
    border: 1px solid black;
    height: 30px;
  }

  .about-panel {
    width: 100%;
    display: block;
    margin-bottom: 50px;
  }

  .about-section {
    height: auto;
  }

  header {
    height: 20vh;
  }

  h1 {
    width: 100%;
    float: none;
    text-align: center;
    line-height: 1;
    font-size: 1.5em;
  }

  .full-screen h1 {
    font-size: 2em;
  }

  .full-screen h2 {
    font-size: 1.2em;
  }

  form {
    width: 100%;
    float: none;
  }

  #map {
    height: 70vh;
    width: 100%;
    float: none;
  }

  #results {
    height: auto;
    width: 100%;
    float: none;
    overflow-y: visible;
  }

  #results h3 {
    height: 10vh;
    font-size: 1.5em;
  }

}

